--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,13 +2,29 @@ spring.datasource.url: jdbc:postgresql://localhost:5432/omnichat
 spring.datasource.username: postgres
 spring.datasource.password: 123456
 spring.datasource.driver-class-name: org.postgresql.Driver
+spring.datasource.tomcat.initial-size=15
+spring.datasource.tomcat.max-wait=20000
+spring.datasource.tomcat.max-active=500
+spring.datasource.tomcat.max-idle=15
+spring.datasource.tomcat.min-idle=8
+spring.datasource.tomcat.default-auto-commit=false
 spring.liquibase.enabled=false
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.hibernate.jdbc.lob.non_contextual_creation=true
 #Turn Statistics on
+spring.datasource.hikari.auto-commit=false
 spring.jpa.properties.hibernate.generate_statistics=true
 logging.level.org.hibernate.stat=debug
 # Show all queries
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-logging.level.org.hibernate.type=trace
+spring.jpa.properties.hibernate.use_sql_comments = true
+logging.level.org.hibernate=INFO, hb
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type=TRACE
+logging.level.org.hibernate.hql.ast.AST=info
+logging.level.org.hibernate.tool.hbm2ddl=warn
+logging.level.org.hibernate.hql=debug
+logging.level.org.hibernate.cache=info
+logging.level.org.hibernate.jdbc=debug
+
