--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,15 +13,23 @@ spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.hibernate.jdbc.lob.non_contextual_creation=true
 #Turn Statistics on
 spring.datasource.hikari.auto-commit=false
-spring.jpa.properties.hibernate.generate_statistics=true
-logging.level.org.hibernate.stat=debug
+spring.jpa.properties.hibernate.id.new_generator_mappings=true
+#spring.jpa.properties.hibernate.generate_statistics=true
+
 # Show all queries
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.use_sql_comments = true
-logging.level.org.hibernate=INFO, hb
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.properties.hibernate.use_sql_comments = true
+
+# logs the SQL statements
+#logging.level.org.hibernate.stat=debug
 logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate.type=TRACE
+# Logs the JDBC parameters passed to a query
+logging.level.org.hibernate.type.EnumType=TRACE
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+#logging.level.org.hibernate.type=TRACE
+
+logging.level.org.hibernate=INFO, hb
 logging.level.org.hibernate.hql.ast.AST=info
 logging.level.org.hibernate.tool.hbm2ddl=warn
 logging.level.org.hibernate.hql=debug
