--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.datasource.tomcat.max-idle=15
 spring.datasource.tomcat.min-idle=8
 spring.datasource.tomcat.default-auto-commit=false
 spring.liquibase.enabled=false
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.hibernate.jdbc.lob.non_contextual_creation=true
 #Turn Statistics on
 spring.datasource.hikari.auto-commit=false
